--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,3 +13,4 @@ libc = "0.2"
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 android_logger = "0.15"
 rustix = { version = "1.1", features = ["fs", "event", "mm", "param"] }
+itoa = "1.0"
